<resources>
    <string name="app_name">TipCalc</string>
    <string name="title_activity_tip_calc">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="inc">+</string>
    <string name="dec">-</string>

    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>

</resources>
